// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inputTypeahead renders <input /> 1`] = `
<div
  className="input-typeahead-container"
>
  <Stack
    horizontal={true}
  >
    <form
      aria-labelledby="input"
      className="input-query-form"
    >
      <StyledTextFieldBase
        ariaLabel="Input query"
        className="input-type-head-text-field"
        multiline={false}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="placeholder"
        rows={1}
      />
    </form>
  </Stack>
</div>
`;

exports[`inputTypeahead renders <textarea /> 1`] = `
<div
  className="input-typeahead-container"
>
  <Stack
    horizontal={true}
  >
    <form
      aria-labelledby="input"
      className="input-query-form"
    >
      <StyledTextFieldBase
        ariaLabel="Input query"
        className="input-type-head-text-field"
        multiline={true}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="placeholder"
        rows={1}
      />
    </form>
  </Stack>
</div>
`;
